--- a/app/src/main/res/layout/fragment_week_star_lists.xml
+++ b/app/src/main/res/layout/fragment_week_star_lists.xml
@@ -10,31 +10,26 @@
         android:layout_height="0dp"
         android:layout_weight="1">
 
-        <com.whzl.mengbi.ui.widget.recyclerview.PullRefreshHeader
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
 
-        <ScrollView
+        <android.support.v4.widget.NestedScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:overScrollMode="never">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical">
 
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp">
 
-                    <android.support.v7.widget.RecyclerView
-                        android:id="@+id/rv_week_gift"
-                        android:layout_width="match_parent"
-                        android:layout_height="65dp"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginRight="10dp" />
-                </RelativeLayout>
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/rv_week_gift"
+                    android:layout_width="match_parent"
+                    android:layout_height="65dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_marginTop="10dp"
+                    android:overScrollMode="never" />
 
                 <ImageView
                     android:layout_width="match_parent"
@@ -54,7 +49,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="300dp"
                         android:focusableInTouchMode="false"
-                        android:nestedScrollingEnabled="false" />
+                        android:nestedScrollingEnabled="false"
+                        android:overScrollMode="never" />
 
                     <RelativeLayout
                         android:id="@+id/rl_empty_anchor"
@@ -99,7 +95,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="300dp"
                         android:focusableInTouchMode="false"
-                        android:nestedScrollingEnabled="false" />
+                        android:nestedScrollingEnabled="false"
+                        android:overScrollMode="never" />
 
                     <RelativeLayout
                         android:id="@+id/rl_empty_user"
@@ -127,7 +124,7 @@
 
                 </RelativeLayout>
             </LinearLayout>
-        </ScrollView>
+        </android.support.v4.widget.NestedScrollView>
 
     </com.scwang.smartrefresh.layout.SmartRefreshLayout>
 
