--- a/app/src/main/res/layout/activity_live_display_new.xml
+++ b/app/src/main/res/layout/activity_live_display_new.xml
@@ -250,12 +250,14 @@
                             app:layout_constraintLeft_toLeftOf="parent"
                             app:layout_constraintRight_toLeftOf="parent" />
 
-                        <RelativeLayout
+                        <LinearLayout
                             android:id="@+id/rl_other_side_info"
                             android:layout_width="70dp"
                             android:layout_height="20dp"
                             android:layout_marginTop="10dp"
                             android:background="@drawable/shape_other_side"
+                            android:gravity="center_vertical"
+                            android:orientation="horizontal"
                             android:visibility="gone"
                             app:layout_constraintHorizontal_bias="0.65"
                             app:layout_constraintLeft_toLeftOf="parent"
@@ -266,22 +268,20 @@
                                 android:id="@+id/circle_other_side"
                                 android:layout_width="20dp"
                                 android:layout_height="20dp"
-                                android:layout_centerVertical="true"
                                 android:src="@color/white" />
 
                             <TextView
                                 android:id="@+id/tv_other_side"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_centerInParent="true"
-                                android:layout_marginLeft="8dp"
-                                android:layout_marginRight="8dp"
-                                android:layout_toRightOf="@id/circle_other_side"
+                                android:layout_marginLeft="4dp"
+                                android:layout_marginRight="4dp"
                                 android:ellipsize="end"
                                 android:singleLine="true"
                                 android:textColor="@color/white"
                                 android:textSize="10sp" />
-                        </RelativeLayout>
+
+                        </LinearLayout>
 
                         <LinearLayout
                             android:id="@+id/ll_left_effect"
