--- a/app/src/main/res/layout/fragment_my_royal_level.xml
+++ b/app/src/main/res/layout/fragment_my_royal_level.xml
@@ -21,18 +21,33 @@
                 android:scaleType="fitXY"
                 android:src="@drawable/bg_my_royal" />
 
-            <ImageView
-                android:id="@+id/iv_royal_level"
-                android:layout_width="90dp"
-                android:layout_height="32dp"
+            <RelativeLayout
+                android:id="@+id/rl_royal_level"
+                android:layout_width="91dp"
+                android:layout_height="93.5dp"
                 android:layout_centerHorizontal="true"
-                android:layout_marginTop="54dp" />
+                android:layout_marginTop="54dp">
+
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/bg_royal_lever" />
+
+                <ImageView
+                    android:id="@+id/iv_royal_level"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_centerInParent="true"
+                    android:scaleType="fitCenter"/>
+            </RelativeLayout>
+
 
             <TextView
                 android:id="@+id/tv_royal_level"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/iv_royal_level"
+                android:layout_below="@id/rl_royal_level"
                 android:layout_marginTop="17dp"
                 android:gravity="center"
                 android:textColor="@color/white"
@@ -97,10 +112,10 @@
                     android:id="@+id/btn_recharge"
                     android:layout_width="104dp"
                     android:layout_height="35dp"
-                    android:layout_alignParentRight="true"
                     android:layout_below="@id/tv_how_update"
-                    android:layout_marginRight="14dp"
+                    android:layout_alignParentRight="true"
                     android:layout_marginTop="10dp"
+                    android:layout_marginRight="14dp"
                     android:background="@drawable/shape_yellow_btn"
                     android:text="现在去充值"
                     android:textColor="#010101"
