--- a/app/src/main/res/layout/fragment_my_royal_level.xml
+++ b/app/src/main/res/layout/fragment_my_royal_level.xml
@@ -4,16 +4,14 @@
     android:layout_height="match_parent"
     android:background="@color/white">
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="330dp"
-            android:background="#f6f6f6"
-            android:paddingBottom="10dp">
+            android:layout_height="320dp">
 
             <ImageView
                 android:layout_width="match_parent"
@@ -39,7 +37,7 @@
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:layout_centerInParent="true"
-                    android:scaleType="fitCenter"/>
+                    android:scaleType="fitCenter" />
             </RelativeLayout>
 
 
@@ -65,17 +63,17 @@
             <com.whzl.mengbi.ui.widget.view.MyLevelProgressLayout
                 android:id="@+id/evl_royal_level"
                 android:layout_width="match_parent"
-                android:layout_height="12.5dp"
+                android:layout_height="14dp"
                 android:layout_below="@id/tv_keep_level"
                 android:layout_marginTop="12dp" />
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="87dp"
+                android:layout_height="90dp"
                 android:layout_alignParentBottom="true"
-                android:layout_marginLeft="10dp"
+                android:layout_marginLeft="12dp"
                 android:layout_marginRight="12dp"
-                android:background="@drawable/shape_radius_five">
+                android:background="@drawable/bg_shawdow_whole">
 
                 <TextView
                     android:id="@+id/tv_how_update"
@@ -110,8 +108,9 @@
 
                 <Button
                     android:id="@+id/btn_recharge"
+                    style="@style/Widget.AppCompat.Button.Borderless"
                     android:layout_width="104dp"
-                    android:layout_height="35dp"
+                    android:layout_height="31.5dp"
                     android:layout_below="@id/tv_how_update"
                     android:layout_alignParentRight="true"
                     android:layout_marginTop="10dp"
