--- a/app/src/main/res/layout/layout_my_level.xml
+++ b/app/src/main/res/layout/layout_my_level.xml
@@ -3,21 +3,22 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:gravity="center_vertical"
     android:orientation="horizontal">
 
     <TextView
         android:id="@+id/tv_level_now"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="14dp"
         android:layout_weight="1"
-        android:gravity="center|right"
+        android:gravity="end|center_vertical"
         android:paddingRight="10dp"
         android:textColor="@color/white"
         android:textSize="11sp" />
 
     <com.whzl.mengbi.ui.widget.view.rc.RCRelativeLayout
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="12.5dp"
         android:layout_weight="3"
         app:round_corner="20dp">
 
@@ -25,15 +26,15 @@
             android:id="@+id/tp_my_level"
             style="?android:attr/progressBarStyleHorizontal"
             android:layout_width="match_parent"
-            android:layout_height="20dp" />
+            android:layout_height="12.5dp" />
     </com.whzl.mengbi.ui.widget.view.rc.RCRelativeLayout>
 
     <TextView
         android:id="@+id/tv_level_next"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="14dp"
         android:layout_weight="1"
-        android:gravity="center|left"
+        android:gravity="left|center_vertical"
         android:paddingLeft="10dp"
         android:textColor="@color/white"
         android:textSize="11sp" />
